@@ -1,5 +1,9 @@
 === 1.5.1 (unreleased)
 
+* Add ability to specify how many documents to sample when searching.
+
+  This allows for accurate paging links, facet counts, etc.
+
 * Support a `:weight` option when declaring database fields.
 
 === 1.5.0 (23rd May 2012)
